<resources>
    <string name="app_name">group14_decisionbasedgame</string>
    <string name="btn_start_txt">Start</string>
    <string name="titleView_txt">Doki Doki\nMCM Club</string>
    <string name="btn_settings_txt">Settings</string>
    <string name="btn_credits_txt">Credits</string>
    <string name="btn_exit_txt">Exit</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="dismiss">Dismiss</string>
    <string name="agree">Agree</string>
    <string name="back">Back</string>
    <string name="_100">100%</string>
    <string name="you_will_lose_all_your_progress_do_you_wish_to_continue">You will lose all your progress. Do you wish to continue?</string>
    <string name="confirm">Confirm</string>
    <string name="update">The app is already running in the latest version</string>
    <string name="next_btn">Next</string>
    <string name="skip_btn">Skip</string>
</resources>